Tweaks + added predict
