# iris/misc/swagger.json
@@ -424,6 +424,13 @@
             "type": "string"
           },
           {
+            "name": "trainedModel",
+            "in": "query",
+            "description": " Trained Model to predict with ",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "passenger",
             "in": "query",
             "description": " Id of passenger to predict ",
